# agenthatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  ROADMAP.md  SECURITY.md  SUPPORT.md  _test_ctrlc.py  check_pdf_type.py  evaluation_report_web-fetcher.json  extract_pdf_text.py  pyproject.toml  test_agent_conversation.py  test_ai_agent.py  test_multi_turn.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
agenthatch-core/: README.md  pyproject.toml
agenthatch-core/src/agenthatch_core/: __init__.py  agent.py  config.py  exceptions.py  hooks.py  state.py  types.py
agenthatch-core/src/agenthatch_core/bricks/: __init__.py  api_executor.py  archetypes.py  credential_vault.py  file_processor.py  guards.py  loops.py  manifest.py  plan.py  sandboxes.py  schemas.py  stubs.py  workflow.py
agenthatch-core/src/agenthatch_core/bricks/knowledge/: __init__.py  chunker.py  store.py  tools.py
agenthatch-core/src/agenthatch_core/bricks/memory/: __init__.py  search.py  store.py  tools.py
agenthatch-core/src/agenthatch_core/context/: __init__.py  compact.py  manager.py
agenthatch-core/src/agenthatch_core/llm/: __init__.py  anthropic_adapter.py  client.py  types.py
agenthatch-core/src/agenthatch_core/loop/: __init__.py  agent_loop.py  token_counter.py
agenthatch-core/src/agenthatch_core/mcp/: __init__.py  client.py  config.py
agenthatch-core/src/agenthatch_core/offload/: __init__.py  checkpoint.py  state_manager.py
agenthatch-core/src/agenthatch_core/output/: __init__.py  sanitizer.py
agenthatch-core/src/agenthatch_core/sandbox/: __init__.py  executor.py
agenthatch-core/src/agenthatch_core/tools/: __init__.py  api_templates.py  bus.py  marshal.py  mcp_loader.py
agenthatch-core/src/agenthatch_core/tools/builtins/: __init__.py
sha256-checker/scripts/: check_hash.sh
sha256-checker/skills/: SKILL.md
src/agenthatch/: __init__.py  __main__.py  exceptions.py  providers.py
src/agenthatch/agent/: __init__.py  compact.py  context.py  executor.py  hooks.py  loop.py  mcp.py  offload.py  runtime.py
src/agenthatch/agent/builtins/: __init__.py  file_io.py  geolocation.py  http_client.py  json_parser.py  runtime.py  template_renderer.py  text_synthesis.py  web_search.py
src/agenthatch/base/: __init__.py  sandbox.py
src/agenthatch/cap/: __init__.py  bus.py  marshal.py
src/agenthatch/cli/: __init__.py  interrupt.py  main.py  options.py
src/agenthatch/cli/commands/: __init__.py  _completion.py  assemble.py  doctor.py  hatch.py  hello.py  init.py  migrate.py  run.py  search.py  skills.py
src/agenthatch/config/: __init__.py  loaders.py  validators.py
src/agenthatch/generate/: __init__.py  composer.py  engine.py  readiness.py
src/agenthatch/generate/templates/: README.md.j2  __init__.py  agent.py.j2  cli.py.j2  knowledge_base.py.j2  pyproject.toml.j2  references.py.j2  runtime.toml.j2  tools.py.j2
src/agenthatch/house/: __init__.py  discovery.py  index.py  resolver.py
src/agenthatch/output/: __init__.py  sanitizer.py
src/agenthatch/skill/: __init__.py  builder.py  engine.py  kb_pipeline.py  llm_client.py  parser.py  postgen_review.py  prompts.py  reflection.py  report.py  spec.py  validate.py
tests/: __init__.py  batch_hatch_20.py  chat_test.py  conftest.py  test_config.py  test_config_loaders.py  test_config_validators.py  test_engine.py  test_generated_code_regressions.py  test_hatch_exit_codes.py  test_kb_regressions.py  test_llm_regression.py  test_mcp_regressions.py  test_postgen_review.py  test_providers.py  test_reasoning_stream.py  test_reflection.py  test_report.py  v0817_custom_provider_eval.py  v081_verification.py  v08_agent_qa_demo.py  v08_agent_quality_review.py  v08_cooper_mcp_demo.py  v08_real_api_quality.py  v08_sandbox_verification.py  v08_simulate_phase15.py  v09_agent_evaluation.py
tests/fixtures/knowledge-bases/aetheria/: biology.md  culture.md  geography.md  history.md  technology.md
tests/fixtures/knowledge-bases/dnd-spellbook-srd/: README.md
tests/fixtures/knowledge-bases/dnd-spellbook-srd/draft/: secret-unreleased-spell.md
tests/fixtures/knowledge-bases/dnd-spellbook-srd/spells/: counterspell.md  cure-wounds.md  darkness.md  eldritch-blast.md  feather-fall.md  fire-bolt.md  fireball.md  healing-word.md  light.md  mage-armor.md  magic-missile.md  misty-step.md  sacred-flame.md  shield.md
tests/fixtures/skills/aetheria-guide/: SKILL.md  agenthatch.yaml
tests/fixtures/skills/data-analyzer/: SKILL.md  agenthatch.yaml
tests/fixtures/skills/data-analyzer/scripts/: compute.py
tests/fixtures/skills/dnd-spell-advisor/: SKILL.md
tests/fixtures/skills/minimal-skill/: SKILL.md  agenthatch.yaml
tests/fixtures/skills/weather-reporter/: SKILL.md  agenthatch.yaml
tests/fixtures/skills/weather-reporter/scripts/: query_weather.sh
tests/test_agent/: __init__.py  test_context.py  test_loop.py  test_plan.py  test_runtime.py
tests/test_cli/: test_doctor.py  test_hello.py  test_init.py  test_main.py
tests/test_house/: test_index.py
