[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenthatch"
version = "0.2.2"
description = "Turn any SKILL.md into a runnable AI Agent"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    {name = "EternalRights", email = "eternalrights@outlook.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "typer>=0.15.0",
    "packaging>=24.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/agenthatch/agenthatch"
Repository = "https://github.com/agenthatch/agenthatch"
Issues = "https://github.com/agenthatch/agenthatch/issues"

[project.scripts]
agenthatch = "agenthatch.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agenthatch"]

[tool.hatch.build.targets.sdist]
exclude = [
    "design/",
    "tests/",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-config",
    "--strict-markers",
    "-ra",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.coverage.run]
branch = true
source = ["agenthatch"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]