[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenthatch-core"
version = "0.9.8"
description = "agenthatch Core — lightweight AI Agent runtime base"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    {name = "EternalRights", email = "eternalrights@outlook.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "openai>=1.0",
    "pydantic>=2.5",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/agenthatch/agenthatch"
Repository = "https://github.com/agenthatch/agenthatch"
Issues = "https://github.com/agenthatch/agenthatch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agenthatch_core"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]